tests/ui/test_attr_override_unknown_arg.stderr
error: `z` is not a parameter of this function — per-arg overrides must name one of the fn's positional arguments
 --> tests/ui/test_attr_override_unknown_arg.rs:7:8
  |
7 | #[test(z = "my_gen")]
  |        ^
